--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>lasagna</title>
   </head>
-  <body>
+  <body style="padding: 0 50px">
     <h1>lasagna Recipe</h1>
     <img
       src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F10%2F31%2FHomemade-Lasagna-lutzflcat-1x1-1-2000.jpg&q=60&c=sc&poi=auto&orient=true&h=512"
@@ -19,7 +19,7 @@
       by all the layers of delicious Italian flavor — try this homemade lasagna
       recipe today!
     </p>
-    <h3>Ingredients</h3>
+    <h2>Ingredients</h2>
     <ul>
       <li>½ pound ground pork</li>
       <li>½ pound lean ground beef</li>
@@ -40,5 +40,53 @@
       <li>¼ teaspoon ground black pepper</li>
       <li>1 (16 ounce) package shredded mozzarella cheese</li>
     </ul>
+    <h2>Stapes</h2>
+    <h3>step 1</h3>
+    <p>
+      Combine pork and ground beef in a large, deep skillet over medium-high
+      heat; cook and stir until browned and crumbly, 5 to 7 minutes. Add onion
+      and cook until translucent, about 5 minutes.
+    </p>
+    <h3>step 2</h3>
+    <p>
+      Stir in crushed tomatoes, tomato sauce, 1 tablespoon fresh parsley,
+      garlic, basil, salt, oregano, and sugar. Reduce heat to medium-low and
+      simmer, stirring occasionally, for 30 minutes.
+    </p>
+    <h3>step 3</h3>
+    <p>
+      While the sauce is simmering, bring a large pot of lightly salted water to
+      a boil. Cook lasagna noodles in the boiling water, stirring occasionally,
+      until tender yet firm to the bite, 8 to 10 minutes. Drain and set aside.
+    </p>
+    <h3>step 4</h3>
+    <p>
+      While the noodles are cooking, preheat the oven to 375 degrees F (190
+      degrees C).
+    </p>
+    <h3>step 5</h3>
+    <p>
+      Mix cottage cheese, Parmesan cheese, eggs, remaining 1 tablespoon fresh
+      parsley, salt, and pepper in a large bowl until combined.
+    </p>
+    <h3>step 6</h3>
+    <p>
+      Assemble lasagna: Spread a spoon or two of sauce over the bottom of a
+      9x13-inch baking dish just to to coat it. Place two layers of noodles over
+      the sauce to cover. Layer with 1/2 of the cheese mixture, 1/2 of the
+      remaining sauce, and 1/2 of the mozzarella cheese. Repeat layers once more
+      using the remaining noodles, cheese mixture, sauce, and mozzarella. Cover
+      the baking dish with aluminum foil.
+    </p>
+    <h3>step 7</h3>
+    <p>
+      Bake in the preheated oven for 30 to 40 minutes. Remove the foil and bake
+      until cheese is golden brown, 5 to 10 more minutes.
+    </p>
+    <h3>step 8</h3>
+    <p>
+      Remove from the oven and let stand for 10 minutes before cutting and
+      serving.
+    </p>
   </body>
 </html>
