to prevent aligning on the same line

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <h1>odin-recipes</h1>
-    <a href="recipes/lasagna.html">Recipe Title</a>
+    <ul style="list-style-type: none">
+      <li><a href="recipes/lasagna.html">lasagna Recipe</a></li>
+      <li><a href="recipes/cake.html">Cake Recipe</a></li>
+      <li><a href="recipes/ Gyros.html">Gyros Recipe</a></li>
+    </ul>
   </body>
 </html>
