--- a/index.html
+++ b/index.html
@@ -6,8 +6,41 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>odin-recipes</h1>
-    <ul style="list-style-type: none">
+    <style>
+      body {
+        background: linear-gradient(130deg, #00bcd4, #c1cb5d8f);
+      }
+      #conteiner {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+      }
+      ul {
+        text-decoration: none;
+        list-style: none;
+        display: flex;
+        padding: 0;
+        flex-direction: column;
+        gap: 10px;
+      }
+      li {
+        background-color: #e0d03b;
+        border-radius: 20px;
+        text-align: center;
+        padding: 10px;
+      }
+      li a {
+        padding: 10px;
+        text-decoration: none;
+        color: #000;
+      }
+    </style>
+    <div id="conteiner">
+      <h1>Odin-Recipes</h1>
+      <ul>
       <li><a href="recipes/lasagna.html">lasagna Recipe</a></li>
       <li><a href="recipes/cake.html">Cake Recipe</a></li>
       <li><a href="recipes/ Gyros.html">Gyros Recipe</a></li>
