--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
     <div id="conteiner">
       <h1>Odin-Recipes</h1>
       <ul>
-      <li><a href="recipes/lasagna.html">lasagna Recipe</a></li>
-      <li><a href="recipes/cake.html">Cake Recipe</a></li>
-      <li><a href="recipes/ Gyros.html">Gyros Recipe</a></li>
-    </ul>
+        <li><a href="recipes/lasagna.html">lasagna Recipe</a></li>
+        <li><a href="recipes/cake.html">Cake Recipe</a></li>
+        <li><a href="recipes/ Gyros.html">Gyros Recipe</a></li>
+      </ul>
+    </div>
   </body>
 </html>
